# sundai_01042025

./: .gitignore  COMPLETE_GUIDE.md  README.md  START_HERE.md  USAGE.md  WORKING_SETUP.md  post  post_with_approval  pyproject.toml  reply  reply_with_approval  test_approval  test_mastodon.py  test_openrouter  test_sundai.db  test_telegram  workshop_2_hitl.ipynb
.swarm/: memory.db
api/: __init__.py  config.py  database.py  dependencies.py  main.py  middleware.py  models.py
api/routers/: __init__.py  analytics.py  approvals.py  images.py  posts.py  replies.py
api/services/: __init__.py  image_service.py  post_service.py  reply_service.py
company_docs/: 01_company_overview.md  02_technical_architecture.md  03_product_features.md  04_business_model.md  05_brand_voice.md
database/migrations/: 001_initial_schema.sql
deployment/: README.md  deploy.sh  deploy_api.sh  deploy_api_simple.sh  gcp_setup.sh  install_sqlite.sh  restart_api.sh  sundai-api.service  sundai-bot.service  sundai-bot.timer  update_secret.sh  upload_secrets.sh  verify.sh
docs/: ARCHITECTURE_GUIDE.md  COMMANDS.md  DEPLOYMENT_GUIDE.md  FINAL_ARCHITECTURE.md  FINAL_SUMMARY.md  IMAGE_GENERATION_GUIDE.md  IMPLEMENTATION_CHECKLIST.md  NOTION_INTEGRATION_SUMMARY.md  NOTION_SETUP.md  QUICKSTART.md  README.md
examples/: 01_simple_notion.py  02_simple_ai.py  03_simple_telegram.py  04_structured_output.py  README.md
generated_images/: .gitkeep
src/: image_generator.py  main.py  mastodon_client.py  notion_loader.py  post_generator.py  reply_generator.py  secrets_manager.py  telegram_approval.py
