[project]
name = "sundai-01042025"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.75.0",
    "google-generativeai>=0.8.6",
    "mastodon-py>=2.1.4",
    "openai>=2.14.0",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "python-telegram-bot>=21.10.0",
]
