[project]
name = "sundai-01042025"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.75.0",
    "google-cloud-secret-manager>=2.20.0",
    "google-generativeai>=0.8.6",
    "mastodon-py>=2.1.4",
    "notion-client>=2.7.0",
    "openai>=2.14.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.2.1",
    "python-telegram-bot>=21.10.0",
    "replicate>=1.0.7",
    "requests>=2.31.0",
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.6",
    "aiosqlite>=0.19.0",
]
